[metadata]
name = bili-scraper
version = 0.1.0
author = guoziqi329
author-email = guoziqi329@gmail.com
description = Bilibili website crawler that can download videos, dm, comments, articles, and more.
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/Guoziqi329/bili-scraper
license = MIT
license-files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    requests>=2.0
    python-docx>=1.2.0
    Pillow>=11.3.0
    moviepy>=2.1.2
    protobuf>=6.32.0
    click
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    *.tests
    examples*
    docs*

[bdist_wheel]
universal = 0